2007-01-20  Jeffrey Stedfast  <jeff.stedfast@gmail.com>

	* examples/imap-example.c: #include <glib.h>, fixes bug #394434.

2007-01-20  Jeffrey Stedfast  <jeff.stedfast@gmail.com>

	Fixes bug #394419

	* gmime/gmime-filter-charset.c (filter_filter): Do iconv const
	casting.
	(filter_complete): Same.

2006-11-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_format_date): Changed
	the names of the parameters to date and tz_offset to prevent
	warnings from -Wshadow.

	* gmime/gmime-filter-html.c (writeln): Fixed another possible
	buffer overflow condition pointed out by hpj.

	* gmime/gmime-filter-crlf.c (filter_filter): Fixed a possible
	buffer overflow condition pointed out by hpj.

	* gmime/gmime-gpg-context.c (gpg_ctx_op_step): Modified to use
	poll() rather than select()

2006-09-18  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: Use SOURCES_XML instead of XML_SOURCES to
	specify the sources.xml file.  XML_SOURCES breaks with newer
	automakes.

2006-08-29  Pawel Salek  <pawsa@theochem.kth.se>

	* gmime/gmime-message-partial.c: set buf just before use - since
	the mem stream buffer may get reallocated in the meantime leading
	to segfaults.

2006-08-29  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-param.c (decode_quoted_string): Unescape escape
	sequences. Fixes bug #352771.

	* gmime/gmime-message.c (g_mime_message_set_subject): Updated the
	docs.
	(g_mime_message_get_subject): Same.

2006-08-21  Peter Bloomfield  <peterbloomfield@bellsouth.net>

	* gmime/gmime-utils.c (g_mime_utils_unquote_string): handle an
	arbitrary sequence of quoted and unquoted sections.

2006-08-02  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.3

	* gmime/gmime-message.c (process_header): Decode the values for
	Subject, From, Reply-To so that g_mime_message_get_subject/etc all
	return decoded strings like they were meant to.

2006-06-23  Jeffrey Stedfast  <fejj@novell.com>
