@@ -1,5 +1,7 @@
 2007-01-20  Jeffrey Stedfast  <jeff.stedfast@gmail.com>
 
+	* tests/test-streams.c (test_stream_gets): printf formatter fixes.
+
 	* examples/imap-example.c: #include <glib.h>, fixes bug #394434.
 
 2007-01-20  Jeffrey Stedfast  <jeff.stedfast@gmail.com>
